assets/css/style.css
body {
	color:#777777;
	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
	background-color: black;
	margin:0;
}
footer {
	clear:both;
	width:100%;
	height: 90px;
	background-color: #666666;
	border-top: 10px solid #4aaaa5;
	color:lightgrey;
}
footer p {
	padding-left: 450px;
	padding-top: 30px;
	font-size: 10px;
}
h1 {
	padding-left: 55px;
	padding-top: 10px;
	font-size: 24px;
	color:white;	
}
h1 h2 h3{
	font-family:'Georgia', Times, Times New Roman, serif;
	text-align: center;
	font-size: 24px;
}
nav {
	margin-top: 30px;
	margin-right: 250px;
	float:right;
}
nav a:link{
	color:#A7B8C9;
	text-decoration: none;
}
nav a:visited{
	color:#A7B8C9;
	text-decoration: none;
}
nav a:hover {
	color:black;
	text-decoration: underline;
}
nav a:active {
	color:green;
	text-decoration: underline;
}
#topBox {
	background-color:#4aaaa5 ;
	width:300px;
	height:85px;
	margin:0 0 0 130px;
	float:left;
}
#content h2 {
	color:#4aaaa5;
	margin-left: 45px;
	border-bottom: 5px solid #dddddd;
	padding-bottom: 10px;
	margin-right: 45px;
}
#portLink {
	border-right: 2px solid lightgrey;
	border-left: 2px solid lightgrey;
	padding-left: 10px;
	padding-right: 10px;
	margin-right: 10px;
	margin-left: 10px;
}
#topBar{
	padding:0;
	margin:0;
	background-color: #ffffff;
}
#wrapper {
	clear:both;
	border-top: 3px solid #dddddd;
	background-image: url('../images/back.png');
	background-color: white;
}
#sideBarAbout {
	clear: both;
	background-color: #ffffff;
	border:1px solid #dddddd;
	width:225px;
	position: relative;
	bottom:395px;
	left:700px;
	overflow: none;
	color:#4aaaa5; 
}
#sideBarAbout img{
	height:25%;
	width:25%;
	padding: 6px;
}
#sideBarContact {
	clear: both;
	background-color: #ffffff;
	border:1px solid #dddddd;
	width:225px;
	position: relative;
	bottom:430px;
	left:700px;
	overflow: none;
	color:#4aaaa5; 
}
#sideBarContact img{
	height:25%;
	width:25%;
	padding: 6px;
}
#sideBarPort {
	clear: both;
	background-color: #ffffff;
	border:1px solid #dddddd;
	width:225px;
	position: relative;
	bottom:828px;
	left:700px;
	overflow: none;
	color:#4aaaa5; 
}
#sideBarPort img{
	height:25%;
	width:25%;
	padding: 6px;
}
#content {
	
	background-color: #ffffff;
	border:1px solid #dddddd;
	width:500px;
	position:relative;
	top:75px;
	left:130px;
}
#mainImage {
	float:left;
	height: 50%;
	width: 50%;
}
#mainImage p {
	clear:both;
}
#backGround {
	width:1100px;
	height:650px;
	margin:auto;
}
#content input {
	margin:0 0 10px 45px;
}
#content p {
	padding:0 10px 0 45px;
}
#content textarea {
	margin:0 0 0 45px;
} 
.box {
	width: 150px;
	height: 150px;
	background-color: black;	 
}
.box p {
	color:white;
	background-color:#4aaaa5;
	width:95px;
	height:40px;
	position: relative;
	top:85px;
	font-size: 18px;
	padding-right: 5px;
}
#hang {
	position:relative;
	top:15px;
	left:75px;
}
#rpg {
	position:relative;
	top:-150px;
	left:275px;
}
#trivia {
	position:relative;
	top:-75px;
	left:75px;
}
#rutgers {
	position:relative;
	top:-240px;
	left:275px;
}
#rock {
	position:relative;
	top:-175px;
	left:75px;
}
#centerIcon {
	margin-left: 6px;
}
h3{
	font-size:24px;
	border-bottom: 5px solid #dddddd;
	margin-right: 5px;
	margin-left: 5px;
    text-align: center;
    margin-top: 10px;
    padding-bottom: 12px;
    
}

